--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,11 +1,19 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/TestLvl.TestLvl
-
-
-EditorStartupMap=/Game/Levels/TestLvl.TestLvl
+EditorStartupMap=/Game/Levels/MainMenu.MainMenu
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Game/Blueprints/BP_NetworkGameInstance.BP_NetworkGameInstance_C
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
+ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/BP_MultiplayerGameMode.BP_MultiplayerGameMode_C
+GlobalDefaultServerGameMode=None
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
